# rmux

./: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md  build.rs  rmux.1  rmux.exe.manifest
.github/workflows/: ci.yml
crates/ratatui-rmux/: Cargo.toml
crates/rmux-client/: Cargo.toml
crates/rmux-client/src/: attach.rs  control.rs
crates/rmux-client/tests/: attach_session.rs
crates/rmux-core/: Cargo.toml
crates/rmux-core/src/: formats.rs  lib.rs
crates/rmux-ipc/: Cargo.toml
crates/rmux-ipc/src/: listener.rs
crates/rmux-ipc/tests/: named_pipe_integration.rs
crates/rmux-os/: Cargo.toml
crates/rmux-os/src/: host.rs  lib.rs  process.rs  process_tests.rs  process_windows.rs
crates/rmux-proto/: Cargo.toml  README.md
crates/rmux-proto/src/: codec.rs  control.rs  frame_kind.rs  identity.rs  lib.rs  types.rs
crates/rmux-proto/tests/: wire_v1.rs
crates/rmux-pty/: Cargo.toml
crates/rmux-pty/src/: child.rs  lib.rs  pty.rs
crates/rmux-pty/tests/: pty_integration.rs
crates/rmux-sdk/: Cargo.toml
crates/rmux-sdk/examples/: detach_safety_net.rs
crates/rmux-sdk/src/: input.rs  lib.rs  types.rs  wait.rs
crates/rmux-sdk/src/bootstrap/: discovery.rs  mod.rs  startup_unix.rs  startup_windows.rs
crates/rmux-sdk/src/bootstrap/startup_unix/: filesystem.rs  tests.rs
crates/rmux-sdk/src/bootstrap/startup_windows/: mutex.rs  probe.rs  tests.rs
crates/rmux-sdk/src/events/: streams.rs  streams_tests.rs
crates/rmux-sdk/src/handles/: builder.rs  owned_session.rs  pane.rs  rmux.rs
crates/rmux-sdk/src/handles/rmux/: connect.rs  tests.rs
crates/rmux-sdk/src/transport/: mod.rs
crates/rmux-sdk/tests/: discovery.rs  identity.rs  lifecycle.rs  smoke_v1_full.rs  wait.rs
crates/rmux-server/: Cargo.toml
crates/rmux-server/src/: control.rs  daemon.rs  format_runtime.rs  handler_attach.rs  (+15 more)
scripts/: cfg-check.sh  file-size-report.sh  no-network-in-runtime.sh  release-local.sh  unsafe-check.sh
src/: cli.rs  cli_args.rs  cli_args_config_tests.rs  cli_args_layout_tests.rs  cli_args_zoom_tests.rs
src/cli/: diagnose.rs  diagnose_tests.rs
src/cli_args/: buffer.rs  client.rs  config.rs  history.rs  keys.rs  message.rs  mode_tree.rs  overlay.rs  pane.rs  prompt.rs  queue.rs  script.rs  session.rs  targets.rs  window.rs
tests/: cli_attach_flow.rs  control_mode_windows.rs  manpage_surface.rs  race_bootstrap.rs  tmux_compat_harness.rs  tmux_compat_surface_matrix.rs
tests/stress/: support.rs
tests/tmux_compat_surface_matrix/: attached_modes.rs  client_control.rs  command_surface.rs  config_surface.rs  support.rs  window_commands.rs
(+76 files in other folders)
