[package]
name = "rmux-ipc"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rmux-os = { path = "../rmux-os" }
tokio = { version = "1.48.0", features = ["io-util", "net", "rt", "sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rustix = { version = "1.1.4", features = ["event", "net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
