[package]
name = "rmux-sdk"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = [
    "events",
], optional = true }
rmux-ipc = { path = "../rmux-ipc" }
rmux-proto = { path = "../rmux-proto" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-util", "rt", "sync"] }

[dev-dependencies]
bincode = "1.3.3"
crossterm = { version = "0.29.0", default-features = false, features = [
    "events",
] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync", "time"] }

[features]
default = []
crossterm = ["dep:crossterm"]
